--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,9 @@
 name: Deploy to GitHub Pages
-
-# Run workflow on every push to the master branch
 on:
   push:
     branches: [ main ]
-
+permissions:
+  contents: write
 jobs:
   deploy-to-github-pages:
     # use ubuntu-latest image to run steps on
